# Github-Analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  entry.sh
src/: analyze_data.py  db_manager.py  fetcher.py  main.py  picture_generator.py  save_data.py  settings.py  token_provider.py
